<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.project</groupId>
  <artifactId>Natter</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
	    <maven.compiler.source>22</maven.compiler.source>
	    <maven.compiler.target>22</maven.compiler.target>
	     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>  
	
	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
		<dependency>
		    <groupId>com.googlecode.json-simple</groupId>
		    <artifactId>json-simple</artifactId>
		    <version>1.1.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-configuration2</artifactId>
		    <version>2.11.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.miglayout/miglayout-swing -->
		<dependency>
		    <groupId>com.miglayout</groupId>
		    <artifactId>miglayout-swing</artifactId>
		    <version>11.4.2</version>
		</dependency>
		
		<dependency>
		  <groupId>com.formdev</groupId>
		  <artifactId>flatlaf</artifactId>
		  <version>3.5.4</version>
		</dependency>
	
	</dependencies>
</project>